# project-x-ai-service

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/ai/: ai.py
app/ai/input_schema/: __init__.py  schema.py
app/ai/output_schema/: __init__.py  output_schema.py
app/ai/prompt/: AutomationPrompts.py  ClarifyAutomationPrompts.py  ClarifyingPrompts.py  ClassifyingPrompt.py  DomainPrompts.py  ExpanderPrompts.py  KnowledgeBasePrompt.py  TasksPrompt.py  UserMemoryPrompt.py  VentingPrompt.py  __init__.py
app/ai/tools/: call_mcp.py  search.py
app/api/routers/: agent_router.py  ai_router.py  mcp_router.py
app/api/schemas/: agent_schema.py  mcp_schema.py
app/core/: config.py  logger.py
app/infrastructure/: db.py
app/infrastructure/database/: README.md  __init__.py  connection.py  crud.py  repository.py
app/mcp/: agent.py  client.py  tools.py
app/mcp/config/: mcp_config.json
app/mcp/gmail_mcp/: app.py  server.py
app/mcp/google-calendar-mcp/: app.py  auth_bootstrap.py  client.py  server.py
app/mcp/google-doc-sheet/: server.py  tool.py
app/mcp/google_calendar_mcp/: app.py  auth_bootstrap.py  server.py
app/mcp/google_doc_sheet_mcp/: server.py  tool.py
app/mcp/notion/: tools.py
app/mcp/slack_mcp/: app.py  server.py
app/services/: ExecutionAgentService.py  ExpanderAgentService.py  mcp_service.py
examples/: expander_agent.request.json
